	* FICS : 
		- save options for finding opponents based on login
		- display forecast of win / draw / loss score (in fact sends assess when creating the game)
	* Highlight last move played (switchable and configurable in options menu)
	* added a new call "sc_game info nextMoveUCI"
	* new feature to review game. The user guesses moves played from one side of a played game.
	* game browser : automatically flip board if the main board is flipped
	* updated Scid icon (thanks to Israel Chauca Fuentes)
	* First version of VIAF/PND support for hooking up Wikipedia et al.
	* Correspondence Chess:
		- Sorting of the gamelist  by various criteria like own clock, opponent clock (Xfcc only)
		- Do not show games where the player does not have the move (Xfcc only)
		- Add GUI to set sort criteria
		- Implement sort by "time per move till next TC" including the next timing period (Suggested by Dhanish)
		- Add Edit menu to cc window
- Translations:
---------------
	* updated spanish translation (thanks to Benigno Hernández)
	* updated swedish translation (thanks to Hans Eriksson)
	* updated german translation

[November 2009 ]

scid-4.1
========
- Features :
------------
- Added the display of arrows when several variations are available. The display can be toggled using the menu Options -> Moves -> Show arrows for variations (Thanks to Fulvio)
- When playing a move already existing in a variation, the variation is automatically entered into. To add a new variation starting with the same move, the menu Edit-> Add variation must be used (Thanks to Fulvio)
- Fixes :
---------
- entering comments for last move of a line was broken
- setting the blunder flag from maintenance window was broken ("?" was considered part of a regular expression)
- when compacting a game file, custom flags description was lost
- custom flags description are now commited to index file as soon as they are modified
- Informant values were overwritten by default values at startup
