@@ -870,4 +870,5 @@ scid-4.1
 - when compacting a game file, custom flags description was lost
 - custom flags description are now commited to index file as soon as they are modified
 - Informant values were overwritten by default values at startup
+- UCI engines : send "go infinite" instead of "go infinite ponder" because it is not handled correctly by some engines and "go infinite" seems sufficient
 
